# a-maze-ing

./: .gitignore  FEEDBACK.md  IMPROVEMENTS.md  LICENSE  Makefile  Makefile.md  README.md  TODO.md  TODO_REMAINING.md  a_maze_ing.md  a_maze_ing.py  audit_poo_solid.md  config.txt  maze1.txt  maze3.txt  mazer.txt  output_validator.md  pyproject.toml  requirements.txt
benchmark/: README.md  ameliorations_kruskal.md  fiche_technique_kruskal.md  run_benchmark.py
benchmark/backtracker/: run_benchmark_backtracker.py
benchmark/backtracker/results/backtracker_20260412_141930/: benchmark_bt_20260412_141930.md
benchmark/backtracker/results/backtracker_20260420_151141/: benchmark_bt_20260420_151141.csv  benchmark_bt_20260420_151141.md
benchmark/kruskal/: run_benchmark.md  run_benchmark.py
benchmark/kruskal/results/: benchmark_20260411_115241.csv  benchmark_20260411_115805.csv
benchmark/kruskal/results/kruskal_20260412_142014/: benchmark_20260412_142014.md
benchmark/kruskal/results/kruskal_20260416_200624/: benchmark_20260416_200624.csv  benchmark_20260416_200624.md
benchmark/kruskal/results/kruskal_20260416_200831/: benchmark_20260416_200831.csv  benchmark_20260416_200831.md
benchmark/kruskal/results/kruskal_20260416_201616/: benchmark_20260416_201616.csv  benchmark_20260416_201616.md
benchmark/kruskal/results/kruskal_20260416_204010/: benchmark_20260416_204010.csv  benchmark_20260416_204010.md
benchmark/kruskal/results/kruskal_20260420_151606/: benchmark_20260420_151606.csv  benchmark_20260420_151606.md
benchmark/pathfinder/: run_benchmark_pathfinder.py
benchmark/pathfinder/results/: benchmark_pf_20260412_140316.csv  benchmark_pf_20260412_140316.md  benchmark_pf_20260412_140815.csv  benchmark_pf_20260412_140815.md
benchmark/pathfinder/results/pathfinder_20260412_142014/: benchmark_pf_20260412_142014.md
benchmark/results/: benchmark_20260411_115241.md  benchmark_20260411_115805.md
controller/: __init__.py  maze_controller.md  maze_controller.py
docs/: audit_poo_solid.md
mazegen/: __init__.py  algorithm.md  algorithm.py  backtracker.md  backtracker.py  kruksal.md  kruksal.py  maze_generator.md  maze_generator.py
model/: __init__.py  config_file.md  config_file.py  config_parser.py  cycle_cheker.py  maze.md  maze.py  maze_validator.md  maze_validator.py  path_finder.md  path_finder.py
tests/: __init__.py  test_config_parser.md  test_config_parser.py  test_cycle_checker.py  test_maze.md  test_maze.py  test_maze_generator.md  test_maze_generator.py  test_maze_validator.md  test_maze_validator.py  test_path_finder.md  test_path_finder.py
utils/: __init__.py  logger.md  logger.py
view/: __init__.py  a-revoirterminal_view.py  ansi_utils.py  curse_view.py  menu.md  menu.py  mlx_view.py  old_terminal_view.py  terminal_backends.py  terminal_launcher.py  terminal_renderer.py  terminal_spawn_info.md  terminal_spawn_runner.py  terminal_view.md  terminal_view.py
