[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4",
]
authors = [
    {name = "gacattan"},
    {name = "cyakisan"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Irohs6/a-maze-ing"

[project.optional-dependencies]
dev = [
    "flake8>=7.0",
    "flake8-pyproject>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.2",
]

[tool.setuptools.packages.find]
include = ["mazegen*"]

# ── pytest ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# ── mypy ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

# ── flake8 (via flake8-pyproject) ───────────────────────
[tool.flake8]
max-line-length = 80
exclude = [".venv", "__pycache__", ".mypy_cache", "build", "dist"]
