[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false
name = "a-maze-ing"
version = "1.0.0"
description = "A reusable maze generator library"
readme = "README.md"
license =  "MIT"
authors = [
    "gacattan",
    "cyakisan",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
 python = ">=3.10"
 colorama = ">=0.4"
 click = ">=8.1"
 pydantic = ">=2.0"
 flake8 = ">=7.0"
 flake8-pyproject = ">=1.2"
 mypy = ">=1.10"
 pytest = ">=8.0"
 pytest-cov = ">=5.0"
 setuptools = ">=68.0"
 wheel = ">=0.43"
 build = ">=1.2"

# ── pytest ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# ── mypy ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

# ── flake8 (via flake8-pyproject) ───────────────────────
[tool.flake8]
max-line-length = 80
exclude = [".venv", "__pycache__", ".mypy_cache", "build", "dist"]

[project]
name = "mazegen"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4",
    "click>=8.1",
    "pydantic>=2.0",
    "flake8>=7.0",
    "flake8-pyproject>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "setuptools>=68.0",
    "wheel>=0.43",
    "build>=1.2"
]

[tool.setuptools]
packages = ["model", "mazegen"]